--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="login-container">
+    <div id="register-container">
+        <h2>Cadastre a Senha</h2>
+        <div class="input-container">
+            <input type="password" id="register-password" placeholder="Senha">
+            <label>
+                <input type="checkbox" id="show-register-password" onclick="togglePasswordVisibility('register-password')"> Mostrar Senha
+            </label>
+        </div>
+        <button onclick="registerPassword()">Cadastrar</button>
+        <p id="register-message"></p>
+    </div>
+
+    <div id="login-container" style="display: none;">
         <h2>Insira a Senha</h2>
-        <input type="password" id="password" placeholder="Senha">
+        <div class="input-container">
+            <input type="password" id="password" placeholder="Senha">
+            <label>
+                <input type="checkbox" id="show-password" onclick="togglePasswordVisibility('password')"> Mostrar Senha
+            </label>
+        </div>
         <button onclick="checkPassword()">Entrar</button>
         <p id="error-message"></p>
     </div>
@@ -17,10 +34,25 @@
     <div id="led-controls" style="display: none;">
         <h2>Controle do LED</h2>
         <button onclick="controlLed('on')">Ligar LED</button>
-        <button onclick="controlLed('off')">Desligar LED</button>
+        <button id="turnOffBtn" onclick="controlLed('off')">Desligar LED</button>
         <p id="led-status"></p>
+        <button onclick="showChangePassword()">Alterar Senha</button>
+        <button onclick="logout()">Logout</button>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+
+    <div id="change-password" style="display: none;">
+        <h2>Alterar Senha</h2>
+        <div class="input-container">
+            <input type="password" id="new-password" placeholder="Nova Senha">
+            <label>
+                <input type="checkbox" id="show-new-password" onclick="togglePasswordVisibility('new-password')"> Mostrar Senha
+            </label>
+        </div>
+        <button onclick="changePassword()">Alterar</button>
+        <p id="change-password-message"></p>
+    </div>
+
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 </body>
 </html>
