--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,8 +33,8 @@
 
     <div id="led-controls" style="display: none;">
         <h2>Controle do LED</h2>
-        <button onclick="controlLed('on')">Ligar LED</button>
-        <button id="turnOffBtn" onclick="controlLed('off')">Desligar LED</button>
+        <button onclick="controlLed('on')">ABRIR PORTA</button>
+        <button id="turnOffBtn" onclick="controlLed('off')">FECHAR PORTA</button>
         <p id="led-status"></p>
         <button onclick="showChangePassword()">Alterar Senha</button>
         <button onclick="logout()">Logout</button>
@@ -52,7 +52,7 @@
         <p id="change-password-message"></p>
     </div>
 
-    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
