--- a/index.html
+++ b/index.html
@@ -3,56 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de LED</title>
+    <title>Controle de Tranca</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" defer></script>
 </head>
 <body>
-    <div id="register-container">
-        <h2>Cadastre a Senha</h2>
-        <div class="input-container">
-            <input type="password" id="register-password" placeholder="Senha">
-            <label>
-                <input type="checkbox" id="show-register-password" onclick="togglePasswordVisibility('register-password')"> Mostrar Senha
-            </label>
+    <main class="form-signin w-100 m-auto p-5" id="form-login">
+        <div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="pass" placeholder="Senha">
+                <label for="floatingPassword">Senha</label>
+            </div>
+
+            <div class="form-check text-start my-3">
+                <input class="form-check-input" type="checkbox" id="flexCheckDefault" onclick="showPass()">
+                <label class="form-check-label" for="flexCheckDefault">Mostrar senha</label>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary w-100 py-2" id="botao" onclick="checkPassword()">Entrar</button>
+                <button class="btn btn-warning w-100 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar senha</button>
+            </div>
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre a sua senha</h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="passCadastro" placeholder="Senha">
+                            <label for="floatingPassword">Senha</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="passConfirm" placeholder="Confirmar senha">
+                            <label for="floatingPassword">Confirmar senha</label>
+                        </div>
+                        <div class="form-check text-start my-3">
+                            <input class="form-check-input" type="checkbox" id="flexCheckDefault" onclick="showPassCadastro()">
+                            <label class="form-check-label" for="flexCheckDefault">Mostrar senha</label>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" onclick="registerPassword()">Cadastrar</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button onclick="registerPassword()">Cadastrar</button>
-        <p id="register-message"></p>
-    </div>
+    </main>
 
-    <div id="login-container" style="display: none;">
-        <h2>Insira a Senha</h2>
-        <div class="input-container">
-            <input type="password" id="password" placeholder="Senha">
-            <label>
-                <input type="checkbox" id="show-password" onclick="togglePasswordVisibility('password')"> Mostrar Senha
-            </label>
+    <main class="form-signin w-100 m-auto p-5" id="form-controle">
+        <div>
+            <div class="d-grid gap-2">
+                <label>Controles</label>
+                <button class="btn btn-success w-100 py-2" onclick="controlLock('open')">Abrir</button>
+                <button class="btn btn-danger w-100 py-2" onclick="controlLock('close')">Fechar</button>
+                <button class="btn btn-secondary w-100 py-2" onclick="showChangePassword()">Trocar a senha</button>
+                <button class="btn btn-light w-100 py-2" id="logoutButton" onclick="logout()">Logout</button>
+                <label id="status"></label>
+            </div>
         </div>
-        <button onclick="checkPassword()">Entrar</button>
-        <p id="error-message"></p>
-    </div>
+    </main>
 
-    <div id="led-controls" style="display: none;">
-        <h2>Controle do LED</h2>
-        <button onclick="controlLed('on')">ABRIR PORTA</button>
-        <button id="turnOffBtn" onclick="controlLed('off')">FECHAR PORTA</button>
-        <p id="led-status"></p>
-        <button onclick="showChangePassword()">Alterar Senha</button>
-        <button onclick="logout()">Logout</button>
-    </div>
-
-    <div id="change-password" style="display: none;">
-        <h2>Alterar Senha</h2>
-        <div class="input-container">
-            <input type="password" id="new-password" placeholder="Nova Senha">
-            <label>
-                <input type="checkbox" id="show-new-password" onclick="togglePasswordVisibility('new-password')"> Mostrar Senha
-            </label>
+    <main class="form-signin w-100 m-auto p-5" id="form-changePass">
+        <div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="newPass" placeholder="Nova senha">
+                <label for="floatingPassword">Nova senha</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="newPassConfirm" placeholder="Confirmar nova senha">
+                <label for="floatingPassword">Confirmar nova senha</label>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary w-100 py-2" onclick="changePassword()">Trocar a senha</button>
+            </div>
         </div>
-        <button onclick="changePassword()">Alterar</button>
-        <p id="change-password-message"></p>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script src="script.js"></script>
+    </main>
 </body>
 </html>
