--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" defer></script>
 </head>
 <body>
-    <main class="form-signin w-100 m-auto p-5" id="form-login">
+    <main class="form-signin w-100 m-auto p-4" id="form-login">
         <div>
+            <div class="form-floating mb-2">
+                <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" autocomplete="off">
+                <label for="floatingInput">Endereço de Email</label>
+            </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="pass" placeholder="Senha">
                 <label for="floatingPassword">Senha</label>
@@ -24,7 +28,7 @@
             </div>
             <div class="d-grid gap-2">
                 <button class="btn btn-primary w-100 py-2" id="botao" onclick="checkPassword()">Entrar</button>
-                <button class="btn btn-warning w-100 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar senha</button>
+                <button class="btn btn-warning w-100 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar conta</button>
             </div>
 
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -35,6 +39,10 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
+                        <div class="form-floating mb-4">
+                            <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" autocomplete="off">
+                            <label for="floatingInput">Endereço de Email</label>
+                        </div>
                         <div class="form-floating">
                             <input type="password" class="form-control" id="passCadastro" placeholder="Senha">
                             <label for="floatingPassword">Senha</label>
@@ -56,20 +64,19 @@
         </div>
     </main>
 
-    <main class="form-signin w-100 m-auto p-5" id="form-controle">
+    <main class="form-signin w-100 m-auto p-4" id="form-controle">
         <div>
             <div class="d-grid gap-2">
                 <label>Controles</label>
                 <button class="btn btn-success w-100 py-2" onclick="controlLock('open')">Abrir</button>
                 <button class="btn btn-danger w-100 py-2" onclick="controlLock('close')">Fechar</button>
-                <button class="btn btn-secondary w-100 py-2" onclick="showChangePassword()">Trocar a senha</button>
                 <button class="btn btn-light w-100 py-2" id="logoutButton" onclick="logout()">Logout</button>
                 <label id="status"></label>
             </div>
         </div>
     </main>
 
-    <main class="form-signin w-100 m-auto p-5" id="form-changePass">
+    <main class="form-signin w-100 m-auto p-4" id="form-changePass">
         <div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="newPass" placeholder="Nova senha">
