--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <main class="form-signin w-100 m-auto p-4" id="form-login">
@@ -23,11 +23,11 @@
             </div>
 
             <div class="form-check text-start my-3">
-                <input class="form-check-input" type="checkbox" id="flexCheckDefault" onclick="showPass()">
+                <input class="form-check-input" type="checkbox" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">Mostrar senha</label>
             </div>
             <div class="d-grid gap-2">
-                <button class="btn btn-primary w-100 py-2" id="botao" onclick="checkPassword()">Entrar</button>
+                <button class="btn btn-primary w-100 py-2" id="botao">Entrar</button>
                 <button class="btn btn-warning w-100 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar conta</button>
             </div>
 
@@ -35,12 +35,12 @@
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre a sua senha</h1>
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre a sua conta</h1>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <div class="form-floating mb-4">
-                            <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" autocomplete="off">
+                            <input type="email" class="form-control" id="emailRegister" placeholder="nome@exemplo.com" autocomplete="off">
                             <label for="floatingInput">Endereço de Email</label>
                         </div>
                         <div class="form-floating">
@@ -52,12 +52,12 @@
                             <label for="floatingPassword">Confirmar senha</label>
                         </div>
                         <div class="form-check text-start my-3">
-                            <input class="form-check-input" type="checkbox" id="flexCheckDefault" onclick="showPassCadastro()">
+                            <input class="form-check-input" type="checkbox" id="flexCheckDefaultCadastro">
                             <label class="form-check-label" for="flexCheckDefault">Mostrar senha</label>
                         </div>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-primary" onclick="registerPassword()">Cadastrar</button>
+                      <button type="button" class="btn btn-primary" id="registerButton">Cadastrar</button>
                     </div>
                 </div>
             </div>
@@ -68,9 +68,9 @@
         <div>
             <div class="d-grid gap-2">
                 <label>Controles</label>
-                <button class="btn btn-success w-100 py-2" onclick="controlLock('open')">Abrir</button>
-                <button class="btn btn-danger w-100 py-2" onclick="controlLock('close')">Fechar</button>
-                <button class="btn btn-light w-100 py-2" id="logoutButton" onclick="logout()">Logout</button>
+                <button class="btn btn-success w-100 py-2" id="openButton">Abrir</button>
+                <button class="btn btn-danger w-100 py-2" id="closeButton">Fechar</button>
+                <button class="btn btn-light w-100 py-2" id="logoutButton">Logout</button>
                 <label id="status"></label>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <label for="floatingPassword">Confirmar nova senha</label>
             </div>
             <div class="d-grid gap-2">
-                <button class="btn btn-primary w-100 py-2" onclick="changePassword()">Trocar a senha</button>
+                <button class="btn btn-primary w-100 py-2" id="changePassButton">Trocar a senha</button>
             </div>
         </div>
     </main>
